--- a/.github/workflows/LoteriaWebApiMVP.yml
+++ b/.github/workflows/LoteriaWebApiMVP.yml
@@ -2,7 +2,7 @@ name: Build and deploy .NET Core application to Web App LoteriaWebApiMVP
 on:
   push:
     branches:
-    - Dev
+    - main
 env:
   AZURE_WEBAPP_NAME: LoteriaWebApiMVP
   AZURE_WEBAPP_PACKAGE_PATH: LoteriaWebApi/publish
@@ -44,5 +44,5 @@ jobs:
       uses: azure/webapps-deploy@v2
       with:
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
-        publish-profile: ${{ secrets.LoteriaWebApiMVP_22DD }}
+        publish-profile: ${{ secrets.LoteriaWebApiMVP_EE94 }}
         package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
