--- a/.github/workflows/LoteriaBackApi.yml
+++ b/.github/workflows/LoteriaBackApi.yml
@@ -1,10 +1,10 @@
-name: Build and deploy .NET Core application to Web App LoteriaWebApiMVP
+name: Build and deploy .NET Core application to Web App LoteriaBackApi
 on:
   push:
     branches:
     - main
 env:
-  AZURE_WEBAPP_NAME: LoteriaWebApiMVP
+  AZURE_WEBAPP_NAME: LoteriaBackApi
   AZURE_WEBAPP_PACKAGE_PATH: LoteriaWebApi/publish
   CONFIGURATION: Release
   DOTNET_CORE_VERSION: 8.0.x
@@ -44,5 +44,5 @@ jobs:
       uses: azure/webapps-deploy@v2
       with:
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
-        publish-profile: ${{ secrets.LoteriaWebApiMVP_EE94 }}
+        publish-profile: ${{ secrets.LoteriaBackApi_CDA7 }}
         package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
