--- a/LoteriaWebApi/appsettings.json
+++ b/LoteriaWebApi/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
 
- // "AllowedHosts": { "*" },
+  "AllowedHosts":  "*" ,
 
   /*
   "ConnectionStrings": {
@@ -21,22 +21,12 @@
       }
     }
   },
-
-
   "ConnectionStrings": {
     "LoteriaBD": "Server=tcp:loteria-gruposim.database.windows.net,1433; Initial Catalog=Loteria; Persist Security Info=False; User ID= Gruposim; Password=Perrilla2024@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
-
-
-
-
-
   "AzureKeyVault": {
     "VaultUrl": "https://keyvaultloteriaa.vault.azure.net/"
   },
-
-
-
   "Jwt": {
     "Key": "JwtKey"
   },
