--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
-
 .vs
+/AccesoDatos/obj
+/AccesoDatos/bin
+/Entidades/obj
+/Entidades/bin
+/LogicaNegocio/obj
+/LogicaNegocio/bin
 /.vs
+/LoteriaWebApi/bin
+/LoteriaWebApi/obj
