--- a/LoteriaWebApi/Properties/launchSettings.json
+++ b/LoteriaWebApi/Properties/launchSettings.json
@@ -17,7 +17,7 @@
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Deve0.m  lopment",
+        "ASPNETCORE_ENVIRONMENT": "Development",
         "VaultUri": "https://keyvaultloteriaa.vault.azure.net/",
         "AZURE_USERNAME": "orlando.org.1994@gmail.com"
       },
