--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,21 @@
 .vs
-/Entidades/obj
-/LogicaNegocio/obj
 /.vs
-/LoteriaWebApi/obj
+/AccesoDatos/obj/Release
+/AccesoDatos/obj/Debug
+/AccesoDatos/bin/Release
+/AccesoDatos/bin/Debug
+
+/Entidades/obj/Release
+/Entidades/obj/Debug
+/Entidades/bin/Release
+/Entidades/bin/Debug
+
+/LogicaNegocio/obj/Release
+/LogicaNegocio/obj/Debug
+/LogicaNegocio/bin/Release
+/LogicaNegocio/bin/Debug
+
+/LoteriaWebApi/obj/Release
+/LoteriaWebApi/obj/Debug
+/LoteriaWebApi/bin/Release
+/LoteriaWebApi/bin/Debug
